# LkEngine

./: .clang-format  .clang-format-ignore  .editorconfig  .gitattributes  .gitignore  .gitmodules  BUILD.md  Build.py  CMakeLists.txt  CMakeSettings.json  Development.md  Doxyfile  Engine.md  GenerateProject.py  GenerateProjects.py  LkEngine.lua  README.md  Setup.py  TestResults.yaml  TestResults.yaml-Summary.json  _config.yml  index.md  premake5.lua
.github/workflows/: Build-Engine.yml  Build-Linux.yml  Build-Windows.yml  Core-Tests.yml  Generate-Doxygen.yml  LkEngine-AutomationTest.yml  LkEngine-CoreTests.yml
Docs/: Development.md  Engine.md
Docs/Doxygen/: LkEngine-DoxygenLayout.xml  LkEngine-Header.html
LkApplication/: LkApplication.lua  imgui.ini  premake5.lua  scene.lukkelele
LkApplication/Source/: LkApplication.cpp
LkApplication/src/: Application.cpp  LkApplication.cpp  Runtime.cpp  TestLayer.cpp  TestLayer.h
LkEditor/: LkEditor.lua  NodeEditor.json
LkEditor/Configuration/: AssetEditor.yaml  EditorLayout.yaml  EditorSettings.yaml
LkEditor/Source/: LkEditor.cpp
LkEngine/: UI.cpp  Viewport.cpp  cpp.hint  main.cpp
LkEngine/Source/: LKpch.h
LkEngine/Test/: LkEngineTest.lua  TestResultParser.py
LkEngine/src/: LKpch.h
LkRuntime/: LkRuntime.lua  NodeEditor.json
LkRuntime/Configuration/: EditorLayout.yaml
LkRuntime/Projects/: EmptyProject.lkproject
LkRuntime/Scenes/: Starter-2024.lkscene  Starter-2025.lkscene  Untitled.lkscene
LkRuntime/Source/: RuntimeApplication.cpp  RuntimeLayer.cpp  RuntimeLayer.h
TestResults/$RUNNER_NAME/: AutomationTest-Badge.json
TestResults/Core/: Badge.json  Core-Badge.json  Core-Summary.json  Summary.json  TestResult-Core.yaml
TestResults/CoreTests/: CoreTests-Badge.json  CoreTests-Summary.json  Summary.json  TestResult-CoreTests.yaml
Tools/: Build-Box2D.py  Build-Glad.py  Build-Glfw.py  GenerateProjects-Linux.sh  GenerateProjects-Windows.bat  GenerateProjects-Windows.py  GenerateProjects.py  LkEngine-Setup.bat  LkEngine-Setup.py  Logger.py  ProjectGeneration_Linux.sh  ProjectGeneration_Windows.bat  ScriptUtils.py
Tools/Module/: Build-Assimp.py  Build-Box2D.py  Build-Glad.py  Build-Glfw.py  PremakeClass.py  PythonClass.py  (+1 more)
_layouts/: default.html
cmake/: FindGLFW3.cmake
lib/: dependencies.lua
src/: Application.h  imgui.ini
(+947 files in other folders)
